--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <!-- Bouton Google -->
 
-            <a href="#" title="Sign in with Google" class="google">
+            <a href="#" title="Sign in with Google">
                 <img src="imgs/icon-google.png" alt="Google">
                 Sign in with Google
             </a>
